Added h2 db dependency